去掉大拇指

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>步梦宇</h1>
       <p>
         大家好，这是我的女朋友<i class="fi-heart heart"></i
-        >步梦宇，她是一个美丽<i class="fi-like"></i>大方<i class="fi-like"></i>又善良<i class="fi-like"></i>的女孩子。
+        >步梦宇，她是一个美丽大方又善良的女孩子。
       </p>
       <ul class="clearing-thumbs" data-clearing>
         <li>
