--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- JavaScript 文件 -->
     <script src="https://cdn.static.runoob.com/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="https://cdn.staticfile.org/foundation/5.5.3/js/vendor/modernizr.js"></script>
+    <link rel="icon" href="favicon.ico">
     <title>步梦宇</title>
     <style>
       .main {
