--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
         touch-action: none;
+        overflow: hidden;
       }
 
       .wrap {
@@ -47,32 +48,8 @@
 
   <body>
     <div class="container">
-      <div class="wrap" style="transform: rotateX(-10deg)">
+      <div class="wrap" style="transform: rotateX(-10deg) translateZ(-1000px)">
         <!-- 替换下面的照片即可 -->
-        <img
-          alt=""
-          src="https://6465-dev-9g0suwuw61afb9f3-1252108641.tcb.qcloud.la/bumengyu.cn/%E5%B5%A9%E5%B1%B1%E4%B8%8A.jpg?sign=969255f42c35996d0971edb95b3ddde4&t=1664441173"
-        />
-        <img
-          alt=""
-          src="https://6465-dev-9g0suwuw61afb9f3-1252108641.tcb.qcloud.la/bumengyu.cn/%E5%B5%A9%E5%B1%B1%E6%99%AF%E5%8C%BA%E9%97%A8%E5%8F%A3.jpg?sign=5507b08a4745545ce934c6bb72a371fd&t=1664441182"
-        />
-        <img
-          alt=""
-          src="https://6465-dev-9g0suwuw61afb9f3-1252108641.tcb.qcloud.la/bumengyu.cn/%E7%94%B5%E5%BD%B1%E5%B0%8F%E9%95%87.jpg?sign=c3ad48a289f331db0b46c061b258169b&t=1664441187"
-        />
-        <img
-          alt=""
-          src="https://6465-dev-9g0suwuw61afb9f3-1252108641.tcb.qcloud.la/bumengyu.cn/%E7%BE%8E%E6%9C%AF%E9%A6%86.jpg?sign=62498a65867620e49cd39b2441414c0f&t=1664441192"
-        />
-        <img
-          alt=""
-          src="https://6465-dev-9g0suwuw61afb9f3-1252108641.tcb.qcloud.la/bumengyu.cn/%E9%BB%84%E6%B2%B3%E8%BE%B9.jpg?sign=6c805c1ce13396d14b96ba7d0a2b57a9&t=1664441199"
-        />
-        <img
-          alt=""
-          src="https://6465-dev-9g0suwuw61afb9f3-1252108641.tcb.qcloud.la/bumengyu.cn/%E9%BE%99%E5%AD%90%E6%B9%96.jpg?sign=5a94413b82294eb7d0a37d99a72730d4&t=1664441205"
-        />
         <!-- <img alt="" src="https://zhangbo02.oss-cn-hangzhou.aliyuncs.com/ning/IMG_2718.JPG">
             <img alt="" src="https://zhangbo02.oss-cn-hangzhou.aliyuncs.com/ning917/8.jpeg">
             <img alt="" src="https://zhangbo02.oss-cn-hangzhou.aliyuncs.com/ning917/9.jpeg">
@@ -80,60 +57,101 @@
       </div>
     </div>
     <script>
-      // 获取dom
-      const container = document.querySelector(".container");
-      const wrap = document.querySelector(".wrap");
-      const imgList = document.querySelectorAll(".wrap img");
-      const length = imgList.length;
-      const angle = 360 / length;
-
-      // 开场动画 延时1000 / 60 = 16.666667 ≈ 17，否则transition不会生效
-      setTimeout(() => {
-        for (let i = 0; i < length; i++) {
-          imgList[i].style.transition =
-            "transform 1s ease " + (length - 1 - i) * 0.1 + "s";
-          imgList[i].style.transform =
-            "rotateY(" + angle * i + "deg) translateZ(320px)";
+      // 获取微博图片
+      fetch(
+        "https://service-j774ml4f-1252108641.sh.apigw.tencentcs.com/release/http-agent",
+        {
+          method: "POST",
+          body: JSON.stringify({
+            url: "https://m.weibo.cn/api/container/getIndex?type=uid&value=5272959485&containerid=1076035272959485",
+            resourceType: "json",
+          }),
         }
-      }, 17);
+      )
+        .then((res) => res.json())
+        .then((data) => {
+          const resource = JSON.parse(data.resource);
+          const weiboImgs = resource.data.cards
+            .filter((item) => item.card_type == 9)
+            .flatMap((item) => {
+              return (item.mblog.pic_ids || []).map(
+                (pid) => `https://lz.sinaimg.cn/oslarge/${pid}`
+              );
+            });
+          console.log(weiboImgs);
+          // 写入dom
+          const wrap = document.querySelector(".wrap");
+          weiboImgs.forEach((weiboImg) => {
+            const img = document.createElement("img");
+            img.src = weiboImg;
+            wrap.append(img);
+          });
+          // 开始渲染
+          render();
+        });
+    </script>
+    <script>
+      function render() {
+        // 获取dom
+        const container = document.querySelector(".container");
+        const wrap = document.querySelector(".wrap");
+        const imgList = document.querySelectorAll(".wrap img");
+        const length = imgList.length;
+        const angle = 360 / length;
 
-      // wrap沿x轴旋转-10度
-      const rotate = { x: -10, y: 0 };
-      wrap.style.transform = "rotateX(" + rotate.x + "deg)";
+        // 开场动画 延时1000 / 60 = 16.666667 ≈ 17，否则transition不会生效
+        setTimeout(() => {
+          for (let i = 0; i < length; i++) {
+            imgList[i].style.transition =
+              "transform 1s ease " + (length - 1 - i) * 0.1 + "s";
+            imgList[i].style.transform =
+              "rotateY(" + angle * i + "deg) translateZ(1600px)";
+          }
+        }, 17);
 
-      // 拖拽查看
-      let isPointerDown = false;
-      let point = null;
-      let last = null;
-      let diff = null;
-      let rafId = null;
-      container.addEventListener("pointerdown", function (e) {
-        this.setPointerCapture(e.pointerId);
-        isPointerDown = true;
-        cancelAnimationFrame(rafId);
-        point = { x: e.clientX, y: e.clientY };
-        last = { x: e.clientX, y: e.clientY };
-        diff = { x: 0, y: 0 };
-      });
-      container.addEventListener("pointermove", function (e) {
-        if (isPointerDown) {
-          const current = { x: e.clientX, y: e.clientY };
-          diff = { x: current.x - last.x, y: current.y - last.y };
-          rotate.x -= diff.y * 0.1;
-          rotate.y += diff.x * 0.1;
-          last = { x: current.x, y: current.y };
-          wrap.style.transform =
-            "rotateX(" + rotate.x + "deg) rotateY(" + rotate.y + "deg)";
-        }
-      });
-      container.addEventListener("pointerup", function (e) {
-        isPointerDown = false;
-        raf();
-      });
-      // 指针取消
-      container.addEventListener("pointercancel", function (e) {
-        isPointerDown = false;
-      });
+        // wrap沿x轴旋转-10度
+        const rotate = { x: -10, y: 0 };
+        wrap.style.transform =
+          "rotateX(" + rotate.x + "deg)  translateZ(-1200px)";
+
+        // 拖拽查看
+        let isPointerDown = false;
+        let point = null;
+        let last = null;
+        let diff = null;
+        let rafId = null;
+        container.addEventListener("pointerdown", function (e) {
+          this.setPointerCapture(e.pointerId);
+          isPointerDown = true;
+          cancelAnimationFrame(rafId);
+          point = { x: e.clientX, y: e.clientY };
+          last = { x: e.clientX, y: e.clientY };
+          diff = { x: 0, y: 0 };
+        });
+        container.addEventListener("pointermove", function (e) {
+          if (isPointerDown) {
+            const current = { x: e.clientX, y: e.clientY };
+            diff = { x: current.x - last.x, y: current.y - last.y };
+            rotate.x -= diff.y * 0.1;
+            rotate.y += diff.x * 0.1;
+            last = { x: current.x, y: current.y };
+            wrap.style.transform =
+              "rotateX(" +
+              rotate.x +
+              "deg) rotateY(" +
+              rotate.y +
+              "deg) translateZ(-1200px)";
+          }
+        });
+        container.addEventListener("pointerup", function (e) {
+          isPointerDown = false;
+          raf();
+        });
+        // 指针取消
+        container.addEventListener("pointercancel", function (e) {
+          isPointerDown = false;
+        });
+      }
 
       /**
        * @description 惯性滚动方法
@@ -148,7 +166,11 @@
           rotate.x -= y * 0.1;
           rotate.y += x * 0.1;
           wrap.style.transform =
-            "rotateX(" + rotate.x + "deg) rotateY(" + rotate.y + "deg)";
+            "rotateX(" +
+            rotate.x +
+            "deg) rotateY(" +
+            rotate.y +
+            "deg)  translateZ(-1200px)";
           if (Math.abs(x) > 1 || Math.abs(y) > 1) {
             rafId = requestAnimationFrame(step);
           }
