--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         display: flex;
         min-height: 100vh;
         perspective: 800px;
-        background: #000;
+        background: url('./background.svg');
         /*background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);*/
 
         /* background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%); */
